opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/incr_map"
bug-reports: "https://github.com/janestreet/incr_map/issues"
dev-repo: "https://github.com/janestreet/incr_map.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build-package" "incr_map" "-j" jobs]
]
depends: [
  "core_kernel"
  "incremental_kernel"
  "jbuilder"
  "ppx_driver"
  "ppx_jane"
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Helpers for incremental operations on map like data structures.

A set of functions for operating incrementally and efficiently on map
like data structures.  This leverages new functionality in Incremental
along with the ability to efficiently diff map data structures using
=Map.symmetric_diff=.
"
