opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/incr_map"
bug-reports: "https://github.com/janestreet/incr_map/issues"
dev-repo: "git+https://github.com/janestreet/incr_map.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "core_kernel"
  "incremental_kernel"
  "ppx_driver"
  "ppx_jane"
  "jbuilder"                {build & >= "1.0+beta12"}
  "ocaml-migrate-parsetree" {>= "0.4"}
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
Helpers for incremental operations on map like data structures.

A set of functions for operating incrementally and efficiently on map
like data structures.  This leverages new functionality in Incremental
along with the ability to efficiently diff map data structures using
=Map.symmetric_diff=.
"
